--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,34 @@
+:root {
+  /* font-family: 'Trade Winds', cursive; */
+}
+
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
+  border: 2px solid red;
+}
+
+html,
+body {
+  margin: 0;
+  padding: 0%;
+}
+
+/* Navigation bar */
+
+nav {
+  font-family: "Trade Winds", cursive;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+nav p {
+  margin: 0 auto;
+  font-family: "Trade Winds", cursive;
 }
 
 img {
-    width: 500px;
+  width: 500px;
 }
 
 table.GeneratedTable {
@@ -16,7 +41,8 @@ table.GeneratedTable {
   color: #000000;
 }
 
-table.GeneratedTable td, table.GeneratedTable th {
+table.GeneratedTable td,
+table.GeneratedTable th {
   border-width: 2px;
   border-color: #050505;
   border-style: solid;
@@ -26,5 +52,3 @@ table.GeneratedTable td, table.GeneratedTable th {
 table.GeneratedTable thead {
   background-color: #ffcc00;
 }
-
-
