--- a/styles.css
+++ b/styles.css
@@ -88,6 +88,24 @@ main {
   height: 10;
 }
 
+.icon {
+  animation-iteration-count: 1;
+  animation-fill-mode: both;
+  animation: rotate 1s linear infinite;
+  animation-play-state: paused;
+  animation-delay: calc(var(--scroll) * -1s);
+}
+
+@keyframes rotate {
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+body {
+  min-height: 300vh;
+}
+
 .theme-toggle-button {
   display: flex;
   align-items: center;
