--- a/styles.css
+++ b/styles.css
@@ -54,11 +54,13 @@ nav {
   background: rgb(50, 50, 50);
   color: var(--turquoise-blue);
   background: var(--background-color);
-  width: 100vw;
+  width: 100%;
   max-width: 100vw;
-  position: fixed;
+  position: sticky;
   top: 0;
+  max-height: 10vh;
   /* transition: var(--transition-delay); */
+  border-top: 5px solid var(--accent-color);
   border-bottom: 5px solid var(--accent-color);
 }
 
@@ -74,6 +76,21 @@ nav div ul li {
   margin-right: 2vw;
   text-decoration: none;
   display: block;
+}
+
+.sticky {
+  width: 100%;
+  position: fixed;
+  top: 0;
+}
+
+.padding {
+  padding-top: 2.5%;
+  transition: 0s;
+}
+
+#homepage {
+  height: 80vh;
 }
 
 main {
@@ -200,6 +217,10 @@ table.GeneratedTable thead {
     text-align: center;
   }
 
+  .padding {
+    padding-top: 3.5%;
+  }
+
   .theme-toggle-button {
     padding: 2px 5px 2px 8px;
     margin-top: 2px;
@@ -218,5 +239,9 @@ table.GeneratedTable thead {
 @media (max-width: 455px) {
   nav {
     font-size: 12px;
+  }
+
+  .padding {
+    padding-top: 4%;
   }
 }
