checked navbar scroll

--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,7 @@ html,
 body {
   margin: 0;
   padding: 0;
-  max-width: 100vw;
+  /* max-width: 100vw; */
 }
 
 /* dark mode */
@@ -93,9 +93,9 @@ nav div ul li {
   height: 80vh;
 }
 
-main {
-  margin-top: 40px;
-}
+/* main {
+  margin-top: 3vh;
+} */
 
 .links {
   display: flex;
@@ -243,5 +243,11 @@ table.GeneratedTable thead {
 
   .padding {
     padding-top: 4%;
+  }
+}
+
+@media (prefers-reduced-motion: no-preference) {
+  html {
+    scroll-behavior: smooth;
   }
 }
