--- a/styles.css
+++ b/styles.css
@@ -357,16 +357,26 @@ table.GeneratedTable thead {
 
 @media (max-width: 455px) {
   .about-table {
-    grid-column-gap: 3px;
-    grid-row-gap: 3px;
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(4, 1fr);
+    /* grid-column-gap: 3px; */
+    grid-row-gap: 5px;
+  }
+
+  #about-me img {
+    width: 90vw;
+    margin: 0 auto;
+    height: 20vh;
+    border-radius: 5px;
   }
 
   .text {
     font-size: 12px;
+    width: 90vw;
   }
 
   nav {
-    font-size: 12px;
+    font-size: 10px;
   }
 
   .padding {
