--- a/styles.css
+++ b/styles.css
@@ -339,18 +339,21 @@ table.GeneratedTable thead {
 
 /* flickity carousel */
 
-.main-carousel {
+.carousel {
   /* height: 60vh; */
   background-color: white;
 }
 
 .carousel-cell {
   width: 80%;
-  height: 100%;
   margin-right: 10px;
   border-radius: 10px;
   border: 3px solid var(--accent-color);
   background: var(--background-color);
+}
+
+.carousel-cell img {
+  max-width: 60%;
 }
 
 /* media queries */
